<resources>
    <string name="app_name">StartAppLogin</string>
    <string name="email">Email</string>
    <string name="create_an_account">Create an account</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="i_already_have_an_account">I already Have an account</string>
    <string name="phone_number">Phone Number</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="your_account_details">Your Account details</string>
</resources>